# samv2

./: .pre-commit-config.yaml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
examples/notebooks/: samv2_automatic_segmentation_with_wandb_tables.ipynb  samv2_prompted_segmentation_with_wandb_tables.ipynb
sam2/: __init__.py  build_sam.py  sam2_image_predictor.py  sam2_video_predictor.py
sam2/modeling/: sam2_base.py
sam2/modeling/sam/: transformer.py
sam2/utils/: misc.py  visualization.py
tests/: conftest.py  test_build_model.py  test_image_inference.py  test_image_predictor.py  test_mask_generator.py  test_video_inference.py  test_video_predictor.py
