[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
description = "fork of the official SAMv2 implementation with cpu support"
name = "samv2"
version = "0.0.1"
authors = [{ name = "Saurav Maheshkar", email = "sauravvmaheshkar@gmail.com" }]
readme = ".github/README.md"
requires-python = ">=3.8"
keywords = [
    "deep-learning",
    "pytorch",
]
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
]


[project.optional-dependencies]
test = ["pytest"]
dev = ["black", "isort", "pre-commit>=2.18.0"]
all = ["samv2[test,dev]"]

[project.urls]
homepage = "https://github.com/SauravMaheshkar/samv2"
repository = "https://github.com/SauravMaheshkar/samv2"

[tool.flit.module]
name = "sam2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W605"]

[tool.ruff.lint.isort]
lines-after-imports = 2
